karl package Changelog
======================

Unreleased
----------

- Fixed lp:920668: more efficient trash UI for deep file hierarchies.

3.80 (2012-01-04)
-----------------

- removed extra tal:attributes from template that caused wrong
  selected values to display

3.79 (2011-12-30)
-----------------

- Fix Chameleon 2 incompatility bugs in email_blog_entry.pt.

- Fix problem with non-ascii characters in exception error messages in both
  the error page view and the postoffice quarantine view.

3.78 (2011-12-29)
-----------------

- Switch to Chameleon 2.

3.77 (2011-12-16)
-----------------

- Fixed tag error on manage communities page.

- Fixed bug in show file view where unicode filenames could cause an
  error.

3.76 (2011-12-15)
-----------------

- Fixed LP #891278: Some links to the wiki trash were incorrect.

- Fixed LP #897435: File content needed to be reindexed on revert.

- LP #824640: Add sorting facets to advanced search view.

- LP #893767: Move 'Multi Upload' out of folder addables.

3.75 (2011-12-07)
-----------------

- Fixed LP #883250: display proper page titles on member management
  pages.

- resolve distorted pictures on people page #892357

3.74 (2011-11-17)
-----------------

- Fixed LP #877364:  tolerate 'macintosh' encoding (ancient OS9-ism) when
  converting HTML to text.

- Fixed LP #824631: Sped up search results involving a large time span
  (such as "past year") using a new kind of index with multiple levels
  of granularity. Also added an evolve script to perform the conversion.

- Show staff calendar tab.

- Fixed LP #890419: show last modified not creator on search results.

- Change default calendar view from day -> month.

3.73 (2011-10-27)
-----------------

- Fixed LP #874519: Clicking 'More Events' Resets Layer Selection

- Fixed a series of IE bugs by restoring the doctype declaration
  at the top of every page.

3.72 (2011-09-29)
-----------------
